--- a/templates/button_css.css
+++ b/templates/button_css.css
@@ -33,3 +33,47 @@
       visibility: visible;
     }
   }
+
+.demo-5 .main h1 {
+    margin: 0.8em 0 0.5em 0;
+    color: #333;
+    font-weight: normal;
+    font-family: 'Orienta', sans-serif;
+    font-size: 36px;
+    line-height: 40px;
+    counter-increment: section-1;
+    counter-reset: section-2 section-3 section-4;
+  }
+.demo-5{
+    margin: 0.8em 0 0.5em 0;
+    color: rgb(1, 1, 1);
+    font-weight: normal;
+    font-family: 'Orienta', sans-serif;
+    font-size: 30px;
+    line-height: 40px;
+    counter-increment: section-2;
+    counter-reset: section-3 section-4;
+    border-bottom: 1px solid #fff;
+    box-shadow: 0 8px 6px -6px black;
+    padding-bottom: 10px;
+    background-color: rgb(217, 228, 232);
+  }
+
+  .demo-5-pred{
+    margin: 0.8em 0 0.5em 0;
+    color: rgb(1, 1, 1);
+    font-weight: normal;
+    font-family: 'Orienta', sans-serif;
+    font-size: 30px;
+    line-height: 40px;
+    counter-increment: section-2;
+    counter-reset: section-3 section-4;
+    border-bottom: 1px solid #fff;
+    box-shadow: 0 8px 6px -6px rgb(75, 4, 62);
+    padding-bottom: 10px;
+    background-color: rgb(205, 184, 198);
+  }
+
+  .one-edge-shadow {
+    box-shadow: 0 8px 6px -6px black;
+  }
